# script-bench-rs

./: .gitignore  Cargo.toml  README.md  bench.py
bench/: Cargo.toml
bench/src/: lib.rs
benches/: boa.rs  koto.rs  luars.rs  mlua.rs.t  mlua_luajit.rs  mlua_luau.rs  piccolo.rs  rhai.rs  rlua.rs  roto.rs  rquickjs.rs  rune.rs  sort_userdata.lua  starlark.rs  wasmi.rs  wasmtime.rs  wasmtime_component.rs
scripts/: sort_userdata.js  sort_userdata.koto  sort_userdata.lua  sort_userdata.rhai  sort_userdata.rn  sort_userdata.roto  sort_userdata.wasm  sort_userdata.wasm.rs  sort_userdata.wat
src/: boa.rs  koto.rs  lib.rs  luars.rs  main.rs  mlua.rs  piccolo.rs  rhai.rs  roto.rs  rquickjs.rs  rune.rs  wasm.rs  wasmi.rs  wasmtime_component.rs
wit/: bench.wit
