[package]
name = "script-bench"
version = "0.1.0"
edition = "2021"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]

[lib]
name = "script_bench"

[features]
boa = ["boa_engine", "boa_gc", "boa_runtime"]
mlua_lua54 = ["mlua/lua54", "mlua/vendored"]
mlua_luau = ["mlua/luau-jit"]
rhai = ["dep:rhai", "dep:itertools", "dep:anyhow"]
rune = ["dep:rune", "dep:anyhow"]
wasmi = ["dep:wasmi", "dep:anyhow"]
wasmtime = ["dep:wasmtime", "dep:anyhow"]

[dependencies]
rand = "0.8"
anyhow = { version = "1.0", optional = true }
itertools = { version = "0.13", optional = true }
boa_engine = { version = "0.20.0", optional = true }
boa_gc = { version = "0.20.0", optional = true }
boa_runtime = { version = "0.20.0", optional = true }
mlua = { version = "0.10.2", optional = true }
rhai = { version = "1.20.0", optional = true }
rquickjs = { version = "0.8.1", optional = true }
rune = { version = "0.13.4", optional = true }
wasmi = { version = "0.40.0", optional = true }
wasmtime = { version = "27.0.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }

[profile.bench]
lto = true

[[bench]]
name = "boa"
harness = false
required-features = ["boa"]

[[bench]]
name = "mlua_lua54"
harness = false
required-features = ["mlua_lua54"]

[[bench]]
name = "mlua_luau"
harness = false
required-features = ["mlua_luau"]

[[bench]]
name = "rhai"
harness = false
required-features = ["rhai"]

[[bench]]
name = "rquickjs"
harness = false
required-features = ["rquickjs"]

[[bench]]
name = "rune"
harness = false
required-features = ["rune"]

[[bench]]
name = "wasmi"
harness = false
required-features = ["wasmi"]

[[bench]]
name = "wasmtime"
harness = false
required-features = ["wasmtime"]
