[package]
name = "script-bench"
version = "0.1.0"
edition = "2021"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]

[lib]
name = "script_bench"

[features]
boa = ["boa_engine", "boa_gc", "boa_runtime"]
koto = ["dep:koto", "dep:anyhow"]
mlua_lua54 = ["mlua/lua54", "mlua/vendored"]
mlua_luau = ["mlua/luau-jit"]
rhai = ["dep:rhai", "dep:itertools", "dep:anyhow"]
rune = ["dep:rune", "dep:anyhow"]
wasmi = ["dep:wasmi", "dep:anyhow"]
wasmtime = ["dep:wasmtime", "dep:anyhow"]

[dependencies]
rand = "0.9"
anyhow = { version = "1.0", optional = true }
itertools = { version = "0.14", optional = true }
boa_engine = { version = "0.20.0", optional = true }
boa_gc = { version = "0.20.0", optional = true }
boa_runtime = { version = "0.20.0", optional = true }
koto = { version = "0.15.3", optional = true }
mlua = { version = "0.10.5", optional = true }
rhai = { version = "1.22.2", optional = true }
rquickjs = { version = "0.9.0", optional = true }
rune = { version = "0.13.4", optional = true }
wasmi = { version = "0.47.0", optional = true }
wasmtime = { version = "33.0.0", optional = true }

[dev-dependencies]
criterion = { version = "0.6" }

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "boa"
harness = false
required-features = ["boa"]

[[bench]]
name = "koto"
harness = false
required-features = ["koto"]

[[bench]]
name = "mlua_lua54"
harness = false
required-features = ["mlua_lua54"]

[[bench]]
name = "mlua_luau"
harness = false
required-features = ["mlua_luau"]

[[bench]]
name = "rhai"
harness = false
required-features = ["rhai"]

[[bench]]
name = "rquickjs"
harness = false
required-features = ["rquickjs"]

[[bench]]
name = "rune"
harness = false
required-features = ["rune"]

[[bench]]
name = "wasmi"
harness = false
required-features = ["wasmi"]

[[bench]]
name = "wasmtime"
harness = false
required-features = ["wasmtime"]
