[package]
name = "script-bench"
version = "0.1.0"
edition = "2021"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]

[lib]
name = "script_bench"

[features]
boa = ["dep:boa_engine", "dep:boa_gc", "dep:boa_runtime"]
koto = ["dep:koto", "dep:anyhow"]
mlua_lua54 = ["mlua/lua54", "mlua/vendored"]
mlua_luau = ["mlua/luau-jit"]
rhai = ["dep:rhai", "dep:itertools", "dep:anyhow"]
roto = ["dep:roto", "dep:anyhow"]
rune = ["dep:rune", "dep:anyhow"]
wasmi = ["dep:wasmi", "dep:anyhow"]
wasmtime = ["dep:wasmtime", "dep:anyhow"]

[dependencies]
rand = "0.9"
anyhow = { version = "1.0", optional = true }
itertools = { version = "0.14", optional = true }
boa_engine = { version = "0.21.0", optional = true }
boa_gc = { version = "0.21.0", optional = true }
boa_runtime = { version = "0.21.0", optional = true }
koto = { version = "0.16.0", optional = true }
mlua = { version = "0.11.4", optional = true }
rhai = { version = "1.23.4", optional = true }
roto = { version = "0.8.0", optional = true, default-features = false }
rquickjs = { version = "0.9.0", optional = true }
rune = { version = "0.13.4", optional = true }
wasmi = { version = "0.51.1", optional = true }
wasmtime = { version = "38.0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.6" }

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "boa"
harness = false
required-features = ["boa"]

[[bench]]
name = "koto"
harness = false
required-features = ["koto"]

[[bench]]
name = "mlua_lua54"
harness = false
required-features = ["mlua_lua54"]

[[bench]]
name = "mlua_luau"
harness = false
required-features = ["mlua_luau"]

[[bench]]
name = "rhai"
harness = false
required-features = ["rhai"]

[[bench]]
name = "roto"
harness = false
required-features = ["roto"]

[[bench]]
name = "rquickjs"
harness = false
required-features = ["rquickjs"]

[[bench]]
name = "rune"
harness = false
required-features = ["rune"]

[[bench]]
name = "wasmi"
harness = false
required-features = ["wasmi"]

[[bench]]
name = "wasmtime"
harness = false
required-features = ["wasmtime"]
